Sun Apr  4 01:27:28 1999  Steve Robbins  <steve@nyongwa.montreal.qc.ca>

	* fvwm/session.h: new file for exports from session.c.
	* fvwm/fvwm.c: include session.h.

1999-04-04  Matthias Clasen  <clasen@mathematik.uni-freiburg.de>

	* fvwm/fvwm.c (Done): use the session management functions
	to save state to $HOME/.fvwm_restart and add 
	"-restore $HOME/.fvwm_restart" to the command exec'd for
	'Restart fvwm2'.

	* fvwm/session.c: reorganized a bit to put only the functions
	in #ifdef SESSION ... #endif which actually depend on SMlib.h.
	(SaveWindowStates): Save window id.
	(LoadWindowStates): Store saved window id in Match struct.
	(matchWin): If Restarting is true, match by window id.

	* fvwm/fvwm.c:
	* fvwm/fvwm.h:
	* fvwm/add_window.c:
	* fvwm/misc.h: Remove #ifdef SESSION ... #endif protection
	around calls to functions which are now compiled unconditionally.

	* NEWS:
	* fvwm/fvwm2.1: document the new Restart functionality.
	
Sat Apr  3 14:12:26 1999  Steve Robbins  <steve@nyongwa.montreal.qc.ca>

	* libs/Parse.c (SkipNTokens): removed unused variable.

	* fvwm/functions.c: removed unused variables.

	* fvwm/menus.c: removed unused variables, initialized variable
	`newItem'.

Sat Apr  3 02:06:01 1999  Steve Robbins  <steve@nyongwa.montreal.qc.ca>

	* libs/Parse.c (XCmpToken): add function from ModParse.c

	* libs/fvwmlib.h: add macro FindToken from ModParse.h

	* libs/Makefile.am (libfvwm_a_SOURCES): removed ModParse.c and
	ModParse.h.

	* libs/Parse.c (GetNextOption): treat comma as a `delimiter',
	rather than a `space'.

1999-04-02  Dominik Vogt  <dominik_vogt@gmx.de>

	* fvwm/events.c (HandlePropertyNotify): merged duplicate if statement

	* fvwm/icons.c (DrawIconWindow): closed unterminated comment

	* fvwm/add_window.c (AddWindow): temporary fix for sides/corners

1999-04-01  Andrew T. Veliath  <andrewtv@usa.net>

	* fvwm/functions.c (func_config): Make GNOMEButton uppercase.

1999-04-02  Matthias Clasen  <clasen@mathematik.uni-freiburg.de>
