@@ -11,41 +11,42 @@ else
 GNOME =
 endif
 
-fvwm2_SOURCES = add_window.c \
-	bindings.c \
-	borders.c \
-	builtins.c \
-	colormaps.c \
-	colors.c \
-	decorations.c \
-	defaults.h \
-	events.c \
-	focus.c \
-	functions.c \
-	functions.h \
-	fvwm.c \
-	fvwm.h \
-	fvwmdebug.c \
-	fvwmdebug.h \
-	$(GNOME) \
-	icccm2.c \
-	icons.c \
-	menus.c \
-	menus.h \
-	misc.c \
-	misc.h \
-	modconf.c \
-	module.c \
-	module.h \
-	move.c \
-	parse.h \
-	placement.c \
-	read.c \
-	resize.c \
-	screen.h \
-	session.c \
-	style.c	\
-	virtual.c \
+fvwm2_SOURCES = add_window.c			\
+	bindings.c				\
+	borders.c				\
+	builtins.c				\
+	colormaps.c				\
+	colors.c				\
+	decorations.c				\
+	defaults.h				\
+	events.c				\
+	focus.c					\
+	functions.c				\
+	functions.h				\
+	fvwm.c					\
+	fvwm.h					\
+	fvwmdebug.c				\
+	fvwmdebug.h				\
+	$(GNOME)				\
+	icccm2.c				\
+	icons.c					\
+	menus.c					\
+	menus.h					\
+	misc.c					\
+	misc.h					\
+	modconf.c				\
+	module.c				\
+	module.h				\
+	move.c					\
+	parse.h					\
+	placement.c				\
+	read.c					\
+	resize.c				\
+	screen.h				\
+	session.c				\
+	session.h				\
+	style.c					\
+	virtual.c				\
 	windows.c
 
 fvwm2_DEPENDENCIES = $(top_builddir)/libs/libfvwm.a
