@@ -1,5 +1,6 @@
-Sun Apr  4 01:27:28 1999  Steve Robbins  <steve@nyongwa.montreal.qc.ca>
+Sun Apr  4 04:04:06 1999  Steve Robbins  <steve@nyongwa.montreal.qc.ca>
 
+	* fvwm/Makefile.am (fvwm2_SOURCES): add `session.h'
 	* fvwm/session.h: new file for exports from session.c.
 	* fvwm/fvwm.c: include session.h.
 
